<resources>
    <string name="app_name">Turn-Up</string>
    <string name="the_turn_up">The Turn-Up</string>
    <string name="motto">Turn-up to the party...party like an animal!</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_user">Register User</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username">Username</string>
    <string name="email_address">Email Adress</string>
    <string name="reset_password">Reset Password</string>
    <string name="account">Account</string>
    <string name="account_details">Account Details</string>
    <string name="account_settings">Account Settings</string>
    <string name="log_out">log Out</string>
</resources>