<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TurnUpSplash">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@color/mid_night_blue"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center_horizontal"
                    android:text="@string/the_turn_up"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="60sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bannerDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center_horizontal"
                    android:text="@string/motto"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showAccountDetails"
                    android:text="@string/account"
                    tools:layout_editor_absoluteX="85dp"
                    tools:layout_editor_absoluteY="562dp" />


            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="Testing Scrolling Effect"
                tools:layout_editor_absoluteX="71dp"
                tools:layout_editor_absoluteY="580dp" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>